--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,9 @@
 [user]
-	name = Adam Eivy
-	email = adam.eivy@disney.com
+	name = Johan Bichel Lindegaard
+	email = public@johan.cc
 [github]
     # https://github.com/blog/180-local-github-config
-    user = atomantic
+    user = mrbichel
 
     # in a few months, look into the include directive (after bug fixes)
     token = MOVEALONG
@@ -197,3 +197,9 @@
 	required = true
 	clean = git media clean %f
 	smudge = git media smudge %f
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
