--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/mrbichel/dotfiles#readme",
   "dependencies": {
+    "async.series": "0.5.2",
     "inquirer": "^1.0.2",
     "node-emoji": "^1.3.0",
     "npmlog": "^2.0.4"
