--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -1,9 +1,9 @@
 [user]
-  name = Johan Bichel Lindegaard
-  email = public@johan.cc
+  name = GITHUBFULLNAME
+  email = GITHUBEMAIL
 [github]
   # https://github.com/blog/180-local-github-config
-  user = mrbichel
+  user = GITHUBUSER
 [color]
 # ui = true is a superset of all the more specific color options
 #  as documented at http://book.git-scm.com/5_customizing_git.html
