--- a/package.json
+++ b/package.json
@@ -29,8 +29,15 @@
   "homepage": "https://github.com/mrbichel/dotfiles#readme",
   "dependencies": {
     "async.series": "0.5.2",
+    "eslint": "6.8.0",
+    "global": "4.4.0",
     "inquirer": "^1.0.2",
+    "instant-markdown-d": "0.2.0-rc.2",
     "node-emoji": "^1.3.0",
-    "npmlog": "^2.0.4"
+    "npm-check-updates": "4.0.1",
+    "npmlog": "^2.0.4",
+    "prettyjson": "1.2.1",
+    "trash": "6.1.1",
+    "vtop": "0.6.1"
   }
 }
