--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -150,6 +150,7 @@
   cob = checkout -b
   sno = show --name-only
   logsimple = log --graph --abbrev-commit --pretty=oneline --all --decorate
+  again = !git commit -a -m \"😭 once more, with feeling\" && git push
 [apply]
   whitespace = nowarn
 
