--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -10,7 +10,7 @@
             "server": "{{put-server-name-here}}",
             "database": "{{put-database-name-here}}",
             "user": "{{put-username-here}}",
-            "password": "{{put-password-here}}"
+            "password": ""
         }
     ],
     "editor.wordWrap": "on",
@@ -38,5 +38,25 @@
     },
     "[javascript]": {
         "editor.defaultFormatter": "HookyQR.beautify"
+    },
+    "svelte.enable-ts-plugin": true,
+    "jshint.packageManager": "yarn",
+    "redhat.telemetry.enabled": false,
+    "explorer.confirmDelete": false,
+    "files.exclude": {
+        "**/node_modules": true
+    },
+    "search.exclude": {
+        "/coverage": true
+    },
+    "editor.inlineSuggest.enabled": true,
+    "github.copilot.enable": {
+        "*": true,
+        "yaml": false,
+        "plaintext": false,
+        "markdown": true
+    },
+    "github.copilot.advanced": {
+    
     }
 }
