--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -1,9 +1,9 @@
 [user]
-  name = Johan Bichel Lindegaard
-  email = public@johan.cc
+  name = GITHUBFULLNAME
+  email = GITHUBEMAIL
 [github]
   # https://github.com/blog/180-local-github-config
-  user = mrbichel
+  user = GITHUBUSER
 [color]
 # ui = true is a superset of all the more specific color options
 #  as documented at http://book.git-scm.com/5_customizing_git.html
@@ -47,15 +47,15 @@
   safecrlf = warn
   # prevent crlf (then you will have to deal with the problem -- dos2unix, etc)
   #safecrlf = true
-	editor = code --wait
-  #editor = code -w
+  editor = vim
+  #editor = subl -w
 
 [alias]
   # most commonly used
   co = checkout
   d = diff --color-words
   cam = commit -a -m
-  upm = !git fetch upstream && git merge upstream/master
+  upm = !git fetch upstream && git merge upstream/main
   # new standard to replace the deprecated git-up gem package:
   up = pull --rebase --autostash
 
@@ -95,7 +95,6 @@
   logr2 = log --stat -M -2
   logit = log --stat -M
   scrub = !git reset --hard && git clean -fd
-  pub = !git pub checkout master && git pull && git checkout dev && git rebase master && git checkout master && git merge dev && git wtf
   cs = status
   rv = remote -v
   lwr = log --stat -C
@@ -119,7 +118,7 @@
   blg = log --graph --decorate --all --abbrev-commit --pretty=oneline
   slog = log --graph --simplify-by-decoration --all --abbrev-commit --pretty=oneline
   lgso = log --graph --date=short --pretty=format:'%C(yellow)%h%Creset %cn%x09%cd %s%C(green bold)%d'
-  ro = !git fetch origin && git reset --hard origin/master
+  ro = !git fetch origin && git reset --hard origin/main
   shorten = "!sh -c 'curl -i http://git.io -F url=$1' -"
   pushnotes = !sh -c 'git push $1 refs/notes/*' -
   fetchnotes = !sh -c 'git fetch $1 refs/notes/*:refs/notes/*' -
@@ -150,7 +149,6 @@
   cob = checkout -b
   sno = show --name-only
   logsimple = log --graph --abbrev-commit --pretty=oneline --all --decorate
-  again = !git commit -a -m \"😭 once more, with feeling\" && git push
 [apply]
   whitespace = nowarn
 
@@ -167,15 +165,14 @@
 [init]
   templatedir = ~/.dotfiles/.git_template
 
-[mergetool]
-  prompt = false
-  keepBackup = false
-
 [merge]
-  tool = vimdiff
-  # Always show a diffstat at the end of a merge
-  stat = true
-  conflictstyle = diff3
+    tool = vscode
+[mergetool "vscode"]
+    cmd = code --wait $MERGED
+[diff]
+    tool = vscode
+[difftool "vscode"]
+    cmd = code --wait --diff $LOCAL $REMOTE
 
 [branch]
     # Automatically set up pull to be --rebase
@@ -198,9 +195,8 @@
   smudge = git media smudge %f
 
 [filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
+  clean = git-lfs clean %f
+  smudge = git-lfs smudge %f
   required = true
-	process = git-lfs filter-process
-[http]
-	sslVerify = false
+[pull]
+	rebase = true
